
### Removed

- O comando `/deletar` foi _deletado_. Para fazer um pedido de deleção de conta, envie um email para `support@menherabot.xyz`
- O comando `/adicionar` foi removido. Você poder adicionar a Menhera diretamente do perfil dela agora!
- O comando `/suporte` foi removido. Para entrar no servidor de suporte, basta clicar no link do comando `/status menhera`

## [3.5.0] 2021-11-15

### Added

- Criado um loop de evento que é executado sempre à meia noite para funções internas
- Usuários não podem usar mais de um comando de economia ao mesmo tempo!
- Usuários no meio de comandos de economia não podem mais ser escolhidos em outros comandos
- Sistema de punição de usuários inativos começou!

### Fix

- Resolvido problema ao ver o banimento de um usuário
- Resolvido problema do blackjack de mandar imagem quando não se responde

## [3.4.3] 2021-11-09

### Added

- Novo comando de imagem `/vasco`

### Fix

- Resolvido o comando inventário não funcionar caso o usuário tenha o item `Necare Hêmítheos`
- Resolvido problema do trisal quando nao encontrava usuarios
- Resolvido erro ao usuários caçarem pela primeira vez

## [3.4.2] 2021-11-09

### Fix

- Problema no comando inventário
- Badges de usuário casado mostrando mesmo se o usuário não estiver casado

## [3.4.1] 2021-11-09

### Fix

- Resolvido problema que o sistema de votos não salvava os dados

## [3.4.0] 2021-11-08

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS** - Com itens mágicos, usuários podem aumentar suas chances de caça, trazendo alguns tipos de caças para sempre obterem sucesso
- Tempo de Cooldown de caças: O tempo base da caça é de uma hora, mas esse tempo pode ser reduzido a partir de itens mágicos que reduzem o cooldown de caça. Esses itens possuem uma porcentagem de drop ao caçar
- Usuários banidos não podem ser mamados