@@ -601,7 +601,8 @@
     "hunt": "Caçar",
     "vote": "Votar em Mim",
     "minutes": "minutos",
-    "hours": "horas"
+    "hours": "horas",
+    "click-to-vote": "Clique Para Votar"
   },
   "astolfo": {
     "description": "É grande né? Disse o Astolfo",
